--- a/app/views/coffee_notes/index.html.haml
+++ b/app/views/coffee_notes/index.html.haml
@@ -1,3 +1,5 @@
+= flash[:notice]
+
 %h1 Coffee Notes
 
 %table
@@ -24,4 +26,4 @@
 
 %br
 
-= link_to 'New Coffee note', new_coffee_note_form_path
+= link_to 'New Coffee note', new_coffee_note_path
