added type and consumption models, started to add consumption attributes to form

--- a/app/views/coffee_notes/_form.html.haml
+++ b/app/views/coffee_notes/_form.html.haml
@@ -8,8 +8,10 @@
 
   .field
     = f.input :date, as: :date, as: :string
+  -# .field
+  -#   = f.input :coffee_type_note
   .field
-    = f.input :coffee_type
+    = f.input :size
   .field
     = f.input :rating
   .field
