--- a/app/views/coffee_notes/index.html.haml
+++ b/app/views/coffee_notes/index.html.haml
@@ -18,6 +18,7 @@
       %tr
         %td= coffee_note.date
         %td= coffee_note.coffee_type
+        -# %td= coffee_note.coffee_consumption.size
         %td= coffee_note.rating
         %td= coffee_note.notes
         %td= link_to 'Show', coffee_note
