added update method, form now working

--- a/app/views/coffee_notes/_form.html.haml
+++ b/app/views/coffee_notes/_form.html.haml
@@ -11,7 +11,7 @@
   -# .field
   -#   = f.input :coffee_type_note
   .field
-    = f.input :size
+    = f.input :size, collection: coffee_sizes
   .field
     = f.input :rating
   .field
