--- a/app/views/coffee_notes/index.html.haml
+++ b/app/views/coffee_notes/index.html.haml
@@ -7,6 +7,7 @@
     %tr
       %th Date
       %th Type
+      %th Size
       %th Rating
       %th Notes
       %th
@@ -18,7 +19,7 @@
       %tr
         %td= coffee_note.date
         %td= coffee_note.coffee_type
-        -# %td= coffee_note.coffee_consumption.size
+        %td= coffee_size(coffee_note)
         %td= coffee_note.rating
         %td= coffee_note.notes
         %td= link_to 'Show', coffee_note
