added coffee types to form, added caffine calculator

--- a/app/views/coffee_notes/_form.html.haml
+++ b/app/views/coffee_notes/_form.html.haml
@@ -8,8 +8,8 @@
 
   .field
     = f.input :date, as: :date, as: :string
-  -# .field
-  -#   = f.input :coffee_type_note
+  .field
+    =f.input :coffee_type_id, collection: coffee_type_selection
   .field
     = f.input :size, collection: coffee_sizes
   .field
