--- a/app/views/coffee_notes/show.html.haml
+++ b/app/views/coffee_notes/show.html.haml
@@ -1,11 +1,10 @@
 %p#notice= notice
 
-%p
-  %b Date:
-  = @coffee_note.date
-%p
-  %b Type:
-  = @coffee_note.coffee_type
+%h1
+  = @coffee_note.coffee_type.name
+
+%h5
+  = format_date(@coffee_note.date)
 %p
   %b Rating:
   = @coffee_note.rating
