updates to form

--- a/app/views/coffee_notes/_form.html.haml
+++ b/app/views/coffee_notes/_form.html.haml
@@ -9,7 +9,7 @@
   .row
     .column.column-25
       .field
-        = f.input :date, as: :date
+        = f.input :date, as: :string
     .column.column-75
       .field
         =f.input :coffee_type_id, collection: coffee_type_selection
